# Data2026

./: .gitignore  Home.py  README.md  cached_data.py  check_db.py  dataset_numerizer.py  ddl.py  duplicate_repo.py  g206_stats.py  gw2_config.json  gw_config.json  inspect_schema.py  jobs.py  match_dataset_tools.py  motherduck.py  opr.py  opr3.py  pipeline.py  pyproject.toml  render-build.sh  render.yaml  requirements.txt  tba.py  test.py  util.py  verify_data.py
.streamlit/: config.toml
data/: frc2025.duckdb  test.duckdb
data/frc2025_export/: load.sql  schema.sql  tba__dlt_loads.csv  tba__dlt_pipeline_state.csv  tba__dlt_version.csv  tba_event_rankings.csv  tba_matches.csv  tba_oprs.csv  tba_staging__dlt_version.csv  tba_staging_event_rankings.csv  tba_staging_matches.csv  tba_staging_oprs.csv  tba_staging_teams.csv  tba_teams.csv
example_pages/: 01_test_dataeditor.py  09_scatterplot.py  11_team_stats_over_time.py
frc_data_281/: __init__.py  __main__.py
frc_data_281/analysis/: __init__.py  dataset_tools.py  numerizer.py  opr.py
frc_data_281/analysis/season_specific/: season_2025.py  season_2026.py
frc_data_281/app/: Home.py  __init__.py  run.py
frc_data_281/app/components/: __init__.py  event_selector.py  style.py  team_stats.py
frc_data_281/app/pages/: 03_enter_tag.py  04_raw_data.py  07_team_selector.py  08_heatmap.py  13_team_spotlight.py  14_pit_scouting.py  15_team_compare.py  16_data_refresh.py  17_chartbuilder_oprs.py  18_new_team_spotlight.py  19_Rankings.py  20_alliance_scoring.py  20_enter_match_csv.py  (+4 more)
frc_data_281/db/: __init__.py  __main__.py  cached_queries.py  connection.py  schema.py
frc_data_281/fsc_scouting/: __init__.py  client.py
frc_data_281/jobs/: __init__.py  scheduler.py
frc_data_281/the_blue_alliance/: __init__.py  client.py  pipeline.py
frc_data_281/utils/: __init__.py  helpers.py
pages/: 03_enter_tag.py  04_raw_data.py  07_team_selector.py  08_heatmap.py  10_match_scouting.py  12_chartbuilder_ccm.py  13_team_spotlight.py  14_pit_scouting.py  15_team_compare.py  16_data_refresh.py  17_chartbuilder_oprs.py  18_new_team_spotlight.py  19_Rankings.py  20_enter_match_csv.py
pages_util/: event_selector.py  style.py  team_stats.py
tests/: test_dataset_numerizer.py  test_fsc_client.py  test_match_dataset_tools.py
tests/data/: example_district_rankings.json  example_predictions.json  matches.pq  sample_coprs.json
utilities/: duplicate_repo.py
(+3 files in other folders)
