[project]
name = "frc-data-281"
version = "0.1.0"
description = "Scouting data analysis for 281 FRC team"
requires-python = "==3.12.*"  # pygwalker compat issues with >3.12
dependencies = [
    "requests",
    "polars",
    "tabulate",
    "streamlit",
    "numpy",
    "streamlit-aggrid",
    "flatten_json",
    "jupyter",
    "notebook",
    "plotly",
    "streamlit-plotly-events",
    "pytest",
    "toml",
    "streamlit_extras",
    "ordered_set",
    "dlt[motherduck]",
    "great_tables",
    "scipy",
    "pygwalker",
    "schedule",
    "duckdb",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
