[project]
name = "frc-data-281"
version = "0.2.0"
description = "Scouting data analysis for 281 FRC team"
requires-python = "==3.12.*"  # pygwalker compat issues with >3.12
dependencies = [
    "requests",
    "polars",
    "tabulate",
    "streamlit",
    "numpy",
    "streamlit-aggrid",
    "flatten_json",
    "jupyter",
    "notebook",
    "plotly",
    "streamlit-plotly-events",
    "pytest",
    "toml",
    "streamlit_extras",
    "ordered_set",
    "dlt[motherduck]",
    "great_tables",
    "scipy",
    "pygwalker",
    "schedule",
    "duckdb",
    "cachetools",
    "Pillow",
]

[project.scripts]
frc-scouting = "frc_data_281.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["frc_data_281"]

[tool.hatch.build.targets.wheel.sources]
"frc_data_281" = "frc_data_281"

[tool.hatch.build]
include = [
    "frc_data_281/**/*.py",
    "frc_data_281/app/static/*",
    "frc_data_281/app/config/*.json",
    "frc_data_281/app/.streamlit/*.toml",
]
